[package]
name = "astra-context-intel"
description = "Context Intelligence Service for ASTRA_ - semantic retrieval and relevance scoring"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
astra-types.workspace = true
astra-context.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
