[package]
name = "astra-observability"
description = "Observability Pipeline for ASTRA_ - tracing, metrics, and run reports"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
astra-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
chrono.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
