[package]
name = "astra-runtime"
description = "Agent Runtime Kernel for ASTRA_ - manages agent lifecycle and task execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
astra-types.workspace = true
astra-capability.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
