[package]
name = "astra-types"
description = "Shared data contracts and type definitions for ASTRA_ multi-agent orchestration framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
